<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        app:srcCompat="@drawable/libreria"
        android:contentDescription="@string/imagen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        tools:ignore="TextSizeCheck">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:text="@string/ge"
                tools:ignore="MissingConstraints,VisualLintOverlap,TextSizeCheck"
                tools:text="Gender" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:text="@string/f"
                tools:text="Female" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/M"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="32dp"
                android:text="@string/other"
                tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintBounds" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="89dp"
                android:layout_height="79dp"
                app:srcCompat="@drawable/gato"
                android:contentDescription="@string/gato" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:text="@string/pf2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                tools:ignore="HardcodedText,VisualLintBounds"
                tools:text="PROFILE" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nm"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srnm"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />

        </TableRow>

    </TableLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:text="@string/C"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:text="@string/fan"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/po"
            tools:ignore="VisualLintBounds" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/T"
            app:layout_column="1"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            app:layout_column="2"
            app:layout_row="1" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ro"
            app:layout_column="3"
            app:layout_row="1"
            tools:ignore="VisualLintBounds" />

    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>